# pam_face_module

./: CMakeLists.txt  README.md  configuration.sh
include/pam_face_module/: aligner.h  face_detector.h  face_feature.h  face_recognition.h  feature_detector.h  feature_manager.h  pnet.h  utils.h
include/pam_face_module/architecture/FaceNet/: facenet.h
include/pam_face_module/architecture/MTCNN/: net.h  onet.h  pnet.h  rnet.h
module/: CMakeLists.txt  database_generator.cpp  pam_module.cpp
src/: main.cpp
src/pam_face_module/: aligner.cpp  face_detector.cpp  face_feature.cpp  face_recognition.cpp  feature_detector.cpp  feature_manager.cpp  pnet.cpp  utils.cpp
src/pam_face_module/architecture/FaceNet/: facenet.cpp  facenet.cpp.autosave
src/pam_face_module/architecture/MTCNN/: net.cpp  onet.cpp  pnet.cpp  rnet.cpp
test/: CMakeLists.txt  test.cpp
test/data/: graph_MTCNN.pb
test/face_module/: aligner_test.h  face_detector_test.h  feature_detector_test.h  feature_manager_test.h
test/pam_face_module/: aligner_test.h  face_detector_test.cpp  face_detector_test.h  face_feature_test.h  face_recognition_test.cpp  face_recognition_test.h  feature_detector_test.h  feature_manager_test.h
